Apply 11_07_XSS.patch

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <hibernate.version>5.2.12.Final</hibernate.version>
         <hibernate-validator.version>6.0.7.Final</hibernate-validator.version>
         <javax-el.version>3.0.1-b08</javax-el.version>
+        <jsoup.version>1.11.3</jsoup.version>
 
         <!--Tools-->
         <ehcache.version>3.4.0</ehcache.version>
@@ -201,6 +202,11 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoup.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
